WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207239
REGRESSION (
r251320
): Can't double tap to select word in Notes on iCloud.com
https://bugs.webkit.org/show_bug.cgi?id=207239
Summary
REGRESSION (r251320): Can't double tap to select word in Notes on iCloud.com
Wenson Hsieh
Reported
2020-02-04 16:36:55 PST
<
rdar://problem/58686015
>
Attachments
Patch
(7.35 KB, patch)
2020-02-04 17:28 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix ChangeLog typo
(7.34 KB, patch)
2020-02-04 19:18 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-02-04 17:28:47 PST
Comment hidden (obsolete)
Created
attachment 389751
[details]
Patch
Wenson Hsieh
Comment 2
2020-02-04 19:18:42 PST
Created
attachment 389759
[details]
Fix ChangeLog typo
Wenson Hsieh
Comment 3
2020-02-04 19:34:22 PST
Comment on
attachment 389759
[details]
Fix ChangeLog typo Thanks for the review!
WebKit Commit Bot
Comment 4
2020-02-04 20:31:42 PST
The commit-queue encountered the following flaky tests while processing
attachment 389759
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2020-02-04 20:32:23 PST
Comment on
attachment 389759
[details]
Fix ChangeLog typo Clearing flags on attachment: 389759 Committed
r255786
: <
https://trac.webkit.org/changeset/255786
>
WebKit Commit Bot
Comment 6
2020-02-04 20:32:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug